# pgs-spectrometer

./: README.md  main.py  makefile  pyproject.toml
interface/: controlccd.py  controlmotor.py  mainwindow.py  mainwindow_old.py
microcontroller-codes/encoder/src/: main.cpp
microcontroller-codes/encoder/test/: old.cpp
microcontroller-codes/motor/src/: MotorPasso.cpp  MotorPasso.h  main.cpp
src/: AlphalasCCD.py  control_motor.py  main.py
src/ccd/: AlphalasCCD.py  ccd.py
src/configs/: ccd_configs.py
src/controller/: controller.py
src/encoder/: encoder.py
src/motor/: motor.py
src/widgets/: acquisition_settings.py  ccd_settings.py  motor_controls.py  scale_controls.py
src/workers/: ccd_worker.py  motor_worker.py
tests/: AlphalasGUI.py  AlphalasGUI.ui  encoder.py  global.py  interface.py  teste.py
